--- a/langgraph-mcp/agent/pyproject.toml
+++ b/langgraph-mcp/agent/pyproject.toml
@@ -7,7 +7,7 @@ authors = [
 ]
 readme = "README.md"
 license = { text = "MIT" }
-requires-python = ">=3.10"
+requires-python = ">=3.12"
 dependencies = [
     "langgraph>=1.0.0",
     "python-dotenv>=1.0.1",
@@ -15,6 +15,7 @@ dependencies = [
     "langchain-mcp-adapters>=0.1.0",
     "deepeval>=1.0.0",
     "langchain>=0.1.0",
+    "deepagents>=0.4.3",
 ]
 
 
