--- a/langgraph-mcp/agent/pyproject.toml
+++ b/langgraph-mcp/agent/pyproject.toml
@@ -26,11 +26,8 @@ dev = ["mypy>=1.11.1", "ruff>=0.6.1"]
 requires = ["setuptools>=73.0.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
-[tool.setuptools]
-packages = ["langgraph.templates.agent", "agent"]
-[tool.setuptools.package-dir]
-"langgraph.templates.agent" = "src/agent"
-"agent" = "src/agent"
+[tool.setuptools.packages.find]
+where = ["src"]
 
 
 [tool.setuptools.package-data]
